--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     // Объявляем правила игры.
     alert("Welcome to a game Hangman")
     // Создаём массив из которого в будущем будем выбирать слово.
-    var words = ["World", "Hello", "Mystery", "Horse"];
+    var words = ["World", "Hello", "Great", "Horse"];
     // Рандомно выбираем слово.
     var word = words[Math.floor(Math.random() * words.length)].toLowerCase();
     // Создаём массив в котором заменяем буквы в слове на  " _ "
